Fix overflow issues: html/body overflow-x, floating shapes bounds, grid minmax, word-break

--- a/client/src/components/auth/Auth.css
+++ b/client/src/components/auth/Auth.css
@@ -92,7 +92,7 @@
   width: 300px;
   height: 300px;
   top: -50px;
-  right: -80px;
+  right: 0;
   animation: float 8s ease-in-out infinite;
 }
 
@@ -100,7 +100,7 @@
   width: 200px;
   height: 200px;
   bottom: 10%;
-  left: -40px;
+  left: 0;
   animation: float 6s ease-in-out infinite 1s;
 }
 
